@@ -9,6 +9,7 @@
 - added support for custom View engine helpers `DEF.helpers.myhelper`
 - fixed killing workers and pypelines
 - added a feature that kills worker flow instances when the main process is terminated
+- extended `Total.readfile(path, [type])` by adding a new type `datauri`
 
 ========================
 0.0.12
